--- a/ui/codemarathon.resumebuilder.spa/src/app/login/login.component.html
+++ b/ui/codemarathon.resumebuilder.spa/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="content" role="main">
 
     <!-- Highlight Card -->
-    <div class="card highlight-card card-small">
+    <!-- <div class="card highlight-card card-small">
   
       <svg id="rocket" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
         <title>Rocket Ship</title>
@@ -21,14 +21,14 @@
         <path id="Path_40" data-name="Path 40" d="M644.6,141S143.02,215.537,147.049,870.207s342.774,201.755,342.774,201.755S404.659,847.213,388.815,762.2c-27.116-145.51-11.551-384.124,271.9-609.1C671.15,139.365,644.6,141,644.6,141Z" transform="translate(-147.025 -140.939)" fill="#f5f5f5"/>
       </svg>
   
-    </div>
+    </div> -->
   
     <!-- Resources -->
-    <h1>Get Started</h1>
+    <h1>Welcome To Resume Builder</h1>
     <p>Here are some links to help you get started:</p>
   
     <div class="card-container">
-      <a class="card"  routerLink="/resume-builder" routerLinkActive="active">
+      <a class="card"  href="https://www.linkedin.com/uas/login?session_redirect=%2Foauth%2Fv2%2Flogin-success%3Fapp_id%3D207118736%26auth_type%3DAC%26flow%3D%257B%2522state%2522%253A%25229876512421%2522%252C%2522scope%2522%253A%2522r_liteprofile%2522%252C%2522appId%2522%253A207118736%252C%2522authorizationType%2522%253A%2522OAUTH2_AUTHORIZATION_CODE%2522%252C%2522authFlowName%2522%253A%2522generic-permission-list%2522%252C%2522currentSubStage%2522%253A0%252C%2522creationTime%2522%253A1669724415673%252C%2522redirectUri%2522%253A%2522http%253A%252F%252F127.0.0.1%253A5500%252Findex.html%2522%252C%2522currentStage%2522%253A%2522LOGIN_SUCCESS%2522%257D&fromSignIn=1&trk=oauth&cancel_redirect=%2Foauth%2Fv2%2Flogin-cancel%3Fapp_id%3D207118736%26auth_type%3DAC%26flow%3D%257B%2522state%2522%253A%25229876512421%2522%252C%2522scope%2522%253A%2522r_liteprofile%2522%252C%2522appId%2522%253A207118736%252C%2522authorizationType%2522%253A%2522OAUTH2_AUTHORIZATION_CODE%2522%252C%2522authFlowName%2522%253A%2522generic-permission-list%2522%252C%2522currentSubStage%2522%253A0%252C%2522creationTime%2522%253A1669724415673%252C%2522redirectUri%2522%253A%2522http%253A%252F%252F127.0.0.1%253A5500%252Findex.html%2522%252C%2522currentStage%2522%253A%2522LOGIN_SUCCESS%2522%257D" routerLinkActive="active">
         <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
         <span>Build Resume Via Linkedin</span>
         <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>          
@@ -99,7 +99,7 @@
     </div> -->
   
     <!-- Links -->
-    <div class="card-container">
+    <!-- <div class="card-container">
       <a class="circle-link" title="Find a Local Meetup" href="https://www.meetup.com/find/?keywords=angular" target="_blank" rel="noopener">
         <svg xmlns="http://www.w3.org/2000/svg" width="24.607" height="23.447" viewBox="0 0 24.607 23.447">
           <title>Meetup Logo</title>
@@ -114,7 +114,7 @@
           <path d="M189.5 20h-134C44.2 20 35 29.2 35 40.6v135.2c0 11.4 9.2 20.6 20.5 20.6h113.4l-5.3-18.5 12.8 11.9 12.1 11.2 21.5 19V40.6c0-11.4-9.2-20.6-20.5-20.6zm-38.6 130.6s-3.6-4.3-6.6-8.1c13.1-3.7 18.1-11.9 18.1-11.9-4.1 2.7-8 4.6-11.5 5.9-5 2.1-9.8 3.5-14.5 4.3-9.6 1.8-18.4 1.3-25.9-.1-5.7-1.1-10.6-2.7-14.7-4.3-2.3-.9-4.8-2-7.3-3.4-.3-.2-.6-.3-.9-.5-.2-.1-.3-.2-.4-.3-1.8-1-2.8-1.7-2.8-1.7s4.8 8 17.5 11.8c-3 3.8-6.7 8.3-6.7 8.3-22.1-.7-30.5-15.2-30.5-15.2 0-32.2 14.4-58.3 14.4-58.3 14.4-10.8 28.1-10.5 28.1-10.5l1 1.2c-18 5.2-26.3 13.1-26.3 13.1s2.2-1.2 5.9-2.9c10.7-4.7 19.2-6 22.7-6.3.6-.1 1.1-.2 1.7-.2 6.1-.8 13-1 20.2-.2 9.5 1.1 19.7 3.9 30.1 9.6 0 0-7.9-7.5-24.9-12.7l1.4-1.6s13.7-.3 28.1 10.5c0 0 14.4 26.1 14.4 58.3 0 0-8.5 14.5-30.6 15.2z"/>
         </svg>
       </a>
-    </div>
+    </div> -->
   
     <!-- Footer -->
     
